--- a/assignments.html
+++ b/assignments.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignments - Sofia Boada</title>
     <link rel="stylesheet" href="styles.css">
-
-
 </head>
 <body>
     <header>
@@ -20,14 +18,13 @@
             </ul>
         </nav>
     </header>
-    
 
     <main>
         <h1>Assignments</h1>
         <p>Here are the assignments for my course:</p>
         <ul>
             <li><strong>Assignment 0:</strong> <a href="https://github.com/sobo3038/assignment-0" target="_blank">Github Link</a> - A Python script that adds two numbers.</li>
-            <!-- You will add more assignments here later -->
+            <!-- More assignments will be added here -->
         </ul>
     </main>
 
