--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Sofia Boada</title>
     <link rel="stylesheet" href="styles.css">
-
-
 </head>
 <body>
     <header>
@@ -20,13 +18,12 @@
             </ul>
         </nav>
     </header>
-    
 
     <main>
         <h1>Contact</h1>
         <p>You can reach me via the following:</p>
         <ul>
-            <li>Email: <a href="sofiabl@bu.edu">sofiabl@bu.edu</a></li>
+            <li>Email: <a href="mailto:sofiabl@bu.edu">sofiabl@bu.edu</a></li>
             <li>LinkedIn: <a href="https://linkedin.com/in/sofiaboada" target="_blank">Sofia Boada</a></li>
         </ul>
     </main>
