--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 
     <main>
         <h1>About Me</h1>
-        <p>Hello! My name is Sofia Boada, a student and aspiring web developer. I am currently working on various projects related to technology and enjoy learning new skills.</p>
+        <p>Hello, my name is Sofia Boada! </p>
+        <p>I'm a senior at Boston University studying Computer Science. 
+        I grew up in the Bay Area and spent 17 years there before moving to Denver, CO during the pandemic. 
+        I am Colombian, and there is nothing I love more than visiting Colombia, which keeps me close to my roots—and yes, I speak Spanish! 
+        I have always been passionate about languages, whether it is learning spoken languages or coding languages (been studying Mandarin for a few years!). 
+        When I am not busy with school, you will usually find me watching or playing tennis, hitting the golf course, or skiing whenever I get the chance.</p>
     </main>
 
     <footer>
