--- a/index.html
+++ b/index.html
@@ -19,15 +19,37 @@
         </nav>
     </header>
 
-    <!-- Background image or gradient -->
+    <!-- Intro section with a large header and some intro text -->
     <section class="intro-section">
         <h1>About Me</h1>
-        <p class="intro-text">Hello, my name is Sofia Boada!</p>
-        <p>I'm a senior at Boston University studying Computer Science. 
-        I grew up in the Bay Area and spent 17 years there before moving to Denver, CO during the pandemic. 
-        I am Colombian, and there is nothing I love more than visiting Colombia, which keeps me close to my roots—and yes, I speak Spanish! 
-        I have always been passionate about languages, whether it is learning spoken languages or coding languages (I've been studying Mandarin for a few years!). 
-        When I am not busy with school, you will usually find me watching or playing tennis, hitting the golf course, or skiing whenever I get the chance.</p>
+        <p>Hello, my name is Sofia Boada! I'm a senior at Boston University studying Computer Science.</p>
+    </section>
+
+    <!-- Information Grid with squares/boxes for content and images -->
+    <section class="info-grid">
+        <div class="info-box">
+            <img src="your-image-1.jpg" alt="Image 1">
+            <h2>Background</h2>
+            <p>I grew up in the Bay Area and spent 17 years there before moving to Denver, CO during the pandemic.</p>
+        </div>
+
+        <div class="info-box">
+            <img src="your-image-2.jpg" alt="Image 2">
+            <h2>My Roots</h2>
+            <p>I am Colombian, and nothing keeps me closer to my roots than visiting Colombia frequently.</p>
+        </div>
+
+        <div class="info-box">
+            <img src="your-image-3.jpg" alt="Image 3">
+            <h2>Languages</h2>
+            <p>I love learning languages—whether it's spoken languages (I speak Spanish and am learning Mandarin) or coding languages!</p>
+        </div>
+
+        <div class="info-box">
+            <img src="your-image-4.jpg" alt="Image 4">
+            <h2>Hobbies</h2>
+            <p>When I'm not studying, you'll find me playing tennis, golfing, or skiing in Colorado's mountains.</p>
+        </div>
     </section>
 
     <footer>
