--- a/index.html
+++ b/index.html
@@ -1,71 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Sofia Boada</title>
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #e0f7fa; /* Light blue background */
+        }
+    </style>
 </head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">About Me</a></li>
-                <li><a href="work-experience.html">Work Experience</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="assignments.html">Assignments</a></li>
-            </ul>
-        </nav>
+
+<body class="bg-white">
+
+    <!-- Header with Navigation -->
+    <header class="bg-gray-100 py-4">
+        <div class="container mx-auto px-4">
+            <nav class="flex justify-center space-x-8">
+                <a class="text-gray-700 hover:text-green-500" href="index.html">About Me</a>
+                <a class="text-gray-700 hover:text-green-500" href="work-experience.html">Work Experience</a>
+                <a class="text-gray-700 hover:text-green-500" href="projects.html">Projects</a>
+                <a class="text-gray-700 hover:text-green-500" href="contact.html">Contact</a>
+                <a class="text-gray-700 hover:text-green-500" href="assignments.html">Assignments</a>
+            </nav>
+        </div>
     </header>
 
-    <!-- Intro section with light blue background -->
-    <section class="intro-section">
-        <h1>About Me</h1>
-    </section>
-
-    <!-- Sentence below the colored box -->
-    <section class="intro-text">
-        <p>Hello, my name is Sofia Boada! I'm a senior at Boston University studying Computer Science.</p>
-    </section>
-
-    <!-- Information Grid with vertically aligned boxes and images on the right -->
-    <section class="info-grid">
-        <div class="info-box">
-            <div class="info-text">
-                <h2>Background</h2>
-                <p>I grew up in the Bay Area and spent 17 years there before moving to Denver, CO during the pandemic.</p>
+    <!-- Main Content Section with Light Blue Background -->
+    <main class="container mx-auto px-4 mt-12">
+        <h1 class="text-4xl font-bold text-center text-gray-800 mb-4">About Me</h1>
+        <section class="bg-gray-50 rounded-lg shadow-md p-8 mb-12">
+            <div class="text-center">
+                <h2 class="text-3xl font-semibold text-gray-800 mb-4">Hello, I'm Sofia Boada!</h2>
+                <p class="text-gray-600 mb-4">I'm a senior at Boston University studying Computer Science. I grew up in the Bay Area and spent 17 years there before moving to Denver, CO during the pandemic. I am Colombian, and I love staying connected to my roots—yes, I speak Spanish!</p>
+                <p class="text-gray-600 mb-4">Languages are a big passion of mine, whether it’s spoken languages or coding. I’ve even been studying Mandarin for a few years now! When I’m not focusing on school, you’ll probably find me playing tennis, hitting the golf course, or skiing whenever I get the chance.</p>
             </div>
-            <img src="your-image-1.jpg" alt="Image 1">
-        </div>
+        </section>
+    </main>
 
-        <div class="info-box">
-            <div class="info-text">
-                <h2>My Roots</h2>
-                <p>I am Colombian, and nothing keeps me closer to my roots than visiting Colombia frequently.</p>
-            </div>
-            <img src="your-image-2.jpg" alt="Image 2">
-        </div>
-
-        <div class="info-box">
-            <div class="info-text">
-                <h2>Languages</h2>
-                <p>I love learning languages—whether it's spoken languages (I speak Spanish and am learning Mandarin) or coding languages!</p>
-            </div>
-            <img src="your-image-3.jpg" alt="Image 3">
-        </div>
-
-        <div class="info-box">
-            <div class="info-text">
-                <h2>Hobbies</h2>
-                <p>When I'm not studying, you'll find me playing tennis, golfing, or skiing in Colorado's mountains.</p>
-            </div>
-            <img src="your-image-4.jpg" alt="Image 4">
-        </div>
-    </section>
-
-    <footer>
-        <p>© 2024 Sofia Boada</p>
+    <!-- Footer -->
+    <footer class="bg-gray-100 py-4 text-center">
+        <p class="text-gray-600">© 2024 Sofia Boada</p>
     </footer>
+
 </body>
+
 </html>
