working on index.html

--- a/index.html
+++ b/index.html
@@ -19,36 +19,48 @@
         </nav>
     </header>
 
-    <!-- Intro section with a large header and some intro text -->
+    <!-- Intro section with light blue background -->
     <section class="intro-section">
         <h1>About Me</h1>
+    </section>
+
+    <!-- Sentence below the colored box -->
+    <section class="intro-text">
         <p>Hello, my name is Sofia Boada! I'm a senior at Boston University studying Computer Science.</p>
     </section>
 
-    <!-- Information Grid with squares/boxes for content and images -->
+    <!-- Information Grid with vertically aligned boxes and images on the right -->
     <section class="info-grid">
         <div class="info-box">
+            <div class="info-text">
+                <h2>Background</h2>
+                <p>I grew up in the Bay Area and spent 17 years there before moving to Denver, CO during the pandemic.</p>
+            </div>
             <img src="your-image-1.jpg" alt="Image 1">
-            <h2>Background</h2>
-            <p>I grew up in the Bay Area and spent 17 years there before moving to Denver, CO during the pandemic.</p>
         </div>
 
         <div class="info-box">
+            <div class="info-text">
+                <h2>My Roots</h2>
+                <p>I am Colombian, and nothing keeps me closer to my roots than visiting Colombia frequently.</p>
+            </div>
             <img src="your-image-2.jpg" alt="Image 2">
-            <h2>My Roots</h2>
-            <p>I am Colombian, and nothing keeps me closer to my roots than visiting Colombia frequently.</p>
         </div>
 
         <div class="info-box">
+            <div class="info-text">
+                <h2>Languages</h2>
+                <p>I love learning languages—whether it's spoken languages (I speak Spanish and am learning Mandarin) or coding languages!</p>
+            </div>
             <img src="your-image-3.jpg" alt="Image 3">
-            <h2>Languages</h2>
-            <p>I love learning languages—whether it's spoken languages (I speak Spanish and am learning Mandarin) or coding languages!</p>
         </div>
 
         <div class="info-box">
+            <div class="info-text">
+                <h2>Hobbies</h2>
+                <p>When I'm not studying, you'll find me playing tennis, golfing, or skiing in Colorado's mountains.</p>
+            </div>
             <img src="your-image-4.jpg" alt="Image 4">
-            <h2>Hobbies</h2>
-            <p>When I'm not studying, you'll find me playing tennis, golfing, or skiing in Colorado's mountains.</p>
         </div>
     </section>
 
