--- a/index.html
+++ b/index.html
@@ -1,71 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>About Me - Sofia Boada</title>
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
 </head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">About Me</a></li>
-                <li><a href="work-experience.html">Work Experience</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="assignments.html">Assignments</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Intro section with light blue background -->
-    <section class="intro-section">
-        <h1>About Me</h1>
-    </section>
-
-    <!-- Sentence below the colored box -->
-    <section class="intro-text">
-        <p>Hello, my name is Sofia Boada! I'm a senior at Boston University studying Computer Science.</p>
-    </section>
-
-    <!-- Information Grid with vertically aligned boxes and images on the right -->
-    <section class="info-grid">
-        <div class="info-box">
-            <div class="info-text">
-                <h2>Background</h2>
-                <p>I grew up in the Bay Area and spent 17 years there before moving to Denver, CO during the pandemic.</p>
-            </div>
-            <img src="your-image-1.jpg" alt="Image 1">
+<body class="bg-blue-100">
+    <!-- Header bar -->
+    <div class="bg-white py-4 shadow-md">
+        <div class="container mx-auto px-4">
+            <nav class="flex justify-center space-x-8">
+                <a class="text-gray-700 hover:text-blue-500" href="#">About Me</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Work Experience</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Projects</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Contact</a>
+            </nav>
         </div>
+    </div>
 
-        <div class="info-box">
-            <div class="info-text">
-                <h2>My Roots</h2>
-                <p>I am Colombian, and nothing keeps me closer to my roots than visiting Colombia frequently.</p>
+    <main class="container mx-auto px-4 mt-12">
+        <h1 class="text-4xl font-bold text-center text-gray-800 mb-4">About Me</h1>
+        <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12">
+            I'm Sofia Boada, a senior at Boston University studying Computer Science. I have a deep passion for languages—whether spoken or coding languages!
+        </p>
+        
+        <!-- Content section with boxes and picture spaces -->
+        <div class="flex flex-col md:flex-row gap-8">
+            <!-- Left side boxes -->
+            <div class="md:w-1/2 space-y-8">
+                <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Background</h2>
+                    <p class="text-gray-600">
+                        I grew up in the Bay Area and spent 17 years there before moving to Denver, CO during the pandemic. I love exploring new places and embracing different cultures.
+                    </p>
+                </div>
+                <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4">My Roots</h2>
+                    <p class="text-gray-600">
+                        I am Colombian, and nothing keeps me closer to my roots than visiting Colombia frequently. It’s where I find a deep sense of belonging and connection.
+                    </p>
+                </div>
+                <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Languages</h2>
+                    <p class="text-gray-600">
+                        I’m fluent in Spanish and am currently learning Mandarin. 
+                    </p>
+                </div>
+                <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Hobbies</h2>
+                    <p class="text-gray-600">
+                        When I’m not studying, you’ll find me playing tennis, golfing, or skiing in Colorado’s mountains.
+                    </p>
+                </div>
             </div>
-            <img src="your-image-2.jpg" alt="Image 2">
-        </div>
-
-        <div class="info-box">
-            <div class="info-text">
-                <h2>Languages</h2>
-                <p>I love learning languages—whether it's spoken languages (I speak Spanish and am learning Mandarin) or coding languages!</p>
+            
+            <!-- Right side picture spaces -->
+            <div class="md:w-1/2 space-y-8">
+                <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
+                    <p class="text-gray-500">Picture 1</p>
+                </div>
+                <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
+                    <p class="text-gray-500">Picture 2</p>
+                </div>
+                <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
+                    <p class="text-gray-500">Picture 3</p>
+                </div>
+                <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
+                    <p class="text-gray-500">Picture 4</p>
+                </div>
             </div>
-            <img src="your-image-3.jpg" alt="Image 3">
         </div>
+    </main>
 
-        <div class="info-box">
-            <div class="info-text">
-                <h2>Hobbies</h2>
-                <p>When I'm not studying, you'll find me playing tennis, golfing, or skiing in Colorado's mountains.</p>
-            </div>
-            <img src="your-image-4.jpg" alt="Image 4">
-        </div>
-    </section>
-
-    <footer>
-        <p>© 2024 Sofia Boada</p>
-    </footer>
+    <div class="fixed bottom-4 left-4 bg-gray-800 rounded-full p-3 cursor-pointer">
+        <i class="fas fa-camera text-white text-xl"></i>
+    </div>
 </body>
 </html>
