--- a/work-experience.html
+++ b/work-experience.html
@@ -8,14 +8,15 @@
 </head>
 <body>
     <header>
-        <nav class="flex justify-center space-x-8">
-            <a class="text-gray-700 hover:text-blue-500" href="index.html">About Me</a>
-            <a class="text-gray-700 hover:text-blue-500" href="work-experience.html">Work Experience</a>
-            <a class="text-gray-700 hover:text-blue-500" href="projects.html">Projects</a>
-            <a class="text-gray-700 hover:text-blue-500" href="contact.html">Contact</a>
-            <a class="text-gray-700 hover:text-blue-500" href="assignments.html">Assignments</a>
+        <nav>
+            <ul>
+                <li><a href="index.html">About Me</a></li>
+                <li><a href="work-experience.html">Work Experience</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="assignments.html">Assignments</a></li>
+            </ul>
         </nav>
-        
     </header>
 
     <main>
