--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <div class="bg-white py-4 shadow-md">
         <div class="container mx-auto px-4">
             <nav class="flex justify-center space-x-8">
-                <a class="text-gray-700 hover:text-blue-500" href="#">About Me</a>
-                <a class="text-gray-700 hover:text-blue-500" href="#">Work Experience</a>
-                <a class="text-gray-700 hover:text-blue-500" href="#">Projects</a>
-                <a class="text-gray-700 hover:text-blue-500" href="#">Contact</a>
+                <a class="text-gray-700 hover:text-blue-500" href="index.html">About Me</a>
+                <a class="text-gray-700 hover:text-blue-500" href="work-experience.html">Work Experience</a>
+                <a class="text-gray-700 hover:text-blue-500" href="projects.html">Projects</a>
+                <a class="text-gray-700 hover:text-blue-500" href="contact.html">Contact</a>
+                <a class="text-gray-700 hover:text-blue-500" href="assignments.html">Assignments</a>
             </nav>
         </div>
     </div>
