--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <title>About Me - Sofia Boada</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-blue-100">
     <!-- Header bar -->
@@ -24,7 +19,6 @@
                 <a class="text-gray-700 hover:text-blue-500" href="contact.html">Contact</a>
                 <a class="text-gray-700 hover:text-blue-500" href="assignments.html">Assignments</a>
             </nav>
-            
         </div>
     </div>
 
