--- a/projects.html
+++ b/projects.html
@@ -8,15 +8,14 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <a class="text-gray-700 hover:text-blue-500" href="index.html">About Me</a>
-                <a class="text-gray-700 hover:text-blue-500" href="work-experience.html">Work Experience</a>
-                <a class="text-gray-700 hover:text-blue-500" href="projects.html">Projects</a>
-                <a class="text-gray-700 hover:text-blue-500" href="contact.html">Contact</a>
-                <a class="text-gray-700 hover:text-blue-500" href="assignments.html">Assignments</a>
-            </ul>
+        <nav class="flex justify-center space-x-8">
+            <a class="text-gray-700 hover:text-blue-500" href="index.html">About Me</a>
+            <a class="text-gray-700 hover:text-blue-500" href="work-experience.html">Work Experience</a>
+            <a class="text-gray-700 hover:text-blue-500" href="projects.html">Projects</a>
+            <a class="text-gray-700 hover:text-blue-500" href="contact.html">Contact</a>
+            <a class="text-gray-700 hover:text-blue-500" href="assignments.html">Assignments</a>
         </nav>
+        
     </header>
 
     <main>
