--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>About Me - Sofia Boada</title>
+    <title>About Me</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
 </head>
 <body class="bg-blue-100">
     <!-- Header bar -->
     <div class="bg-white py-4 shadow-md">
         <div class="container mx-auto px-4">
             <nav class="flex justify-center space-x-8">
-                <a class="text-gray-700 hover:text-blue-500" href="index.html">About Me</a>
-                <a class="text-gray-700 hover:text-blue-500" href="work-experience.html">Work Experience</a>
-                <a class="text-gray-700 hover:text-blue-500" href="projects.html">Projects</a>
-                <a class="text-gray-700 hover:text-blue-500" href="contact.html">Contact</a>
-                <a class="text-gray-700 hover:text-blue-500" href="assignments.html">Assignments</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">About Me</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Work Experience</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Projects</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Contact</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Assignments</a>
             </nav>
         </div>
     </div>
@@ -25,7 +29,7 @@
     <main class="container mx-auto px-4 mt-12">
         <h1 class="text-4xl font-bold text-center text-gray-800 mb-4">About Me</h1>
         <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12">
-            I'm Sofia Boada, a senior at Boston University studying Computer Science. I have a deep passion for languages—whether spoken or coding languages!
+            Hello! My name is Sofia Boada and I am a senior studying Computer Science at Boston University.
         </p>
         
         <!-- Content section with boxes and picture spaces -->
@@ -33,27 +37,21 @@
             <!-- Left side boxes -->
             <div class="md:w-1/2 space-y-8">
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Background</h2>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Box 1</h2>
                     <p class="text-gray-600">
-                        I grew up in the Bay Area and spent 17 years there before moving to Denver, CO during the pandemic. I love exploring new places and embracing different cultures.
+                        Content for box 1 goes here. You can add more details about your company or services.
                     </p>
                 </div>
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-4">My Roots</h2>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Box 2</h2>
                     <p class="text-gray-600">
-                        I am Colombian, and nothing keeps me closer to my roots than visiting Colombia frequently. It’s where I find a deep sense of belonging and connection.
+                        Content for box 2 goes here. This could be about your mission or values.
                     </p>
                 </div>
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Languages</h2>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Box 3</h2>
                     <p class="text-gray-600">
-                        I’m fluent in Spanish and am currently learning Mandarin. 
-                    </p>
-                </div>
-                <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Hobbies</h2>
-                    <p class="text-gray-600">
-                        When I’m not studying, you’ll find me playing tennis, golfing, or skiing in Colorado’s mountains.
+                        Content for box 3 goes here. Perhaps information about your team or achievements.
                     </p>
                 </div>
             </div>
@@ -68,9 +66,6 @@
                 </div>
                 <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
                     <p class="text-gray-500">Picture 3</p>
-                </div>
-                <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center">
-                    <p class="text-gray-500">Picture 4</p>
                 </div>
             </div>
         </div>
