--- a/assignments.html
+++ b/assignments.html
@@ -1,33 +1,59 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignments - Sofia Boada</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>Assignments</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
 </head>
-<body>
-    <header>
-        <nav class="flex justify-center space-x-8">
-            <a class="text-gray-700 hover:text-blue-500" href="index.html">About Me</a>
-            <a class="text-gray-700 hover:text-blue-500" href="work-experience.html">Work Experience</a>
-            <a class="text-gray-700 hover:text-blue-500" href="projects.html">Projects</a>
-            <a class="text-gray-700 hover:text-blue-500" href="contact.html">Contact</a>
-            <a class="text-gray-700 hover:text-blue-500" href="assignments.html">Assignments</a>
-        </nav>
-        
-    </header>
+<body class="bg-blue-100">
+    <!-- Header bar -->
+    <div class="bg-white py-4 shadow-md">
+        <div class="container mx-auto px-4">
+            <nav class="flex justify-center space-x-8">
+                <a class="text-gray-700 hover:text-blue-500" href="#">About Me</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Work Experience</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Projects</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Contact</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Assignments</a>
+            </nav>
+        </div>
+    </div>
 
-    <main>
-        <h1>Assignments</h1>
-        <p>Here are the assignments for my course:</p>
-        <ul>
-            <li><strong>Assignment 0:</strong> <a href="https://github.com/sobo3038/assignment-0" target="_blank">Github Link</a> - A Python script that adds two numbers.</li>
-        </ul>
+    <main class="container mx-auto px-4 mt-12">
+        <h1 class="text-4xl font-bold text-center text-gray-800 mb-8">Assignments</h1>
+
+        <div class="bg-white rounded-lg shadow-md p-6 max-w-2xl mx-auto">
+            <div class="space-y-6">
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 0</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/yourusername/assignment0" target="_blank" class="text-blue-600 hover:underline">https://github.com/yourusername/assignment0</a>
+                    </div>
+                    <p class="text-gray-600">Assignment info: Brief description of what the assignment entailed and what you accomplished.</p>
+                </div>
+
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 1</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/yourusername/assignment1" target="_blank" class="text-blue-600 hover:underline">https://github.com/yourusername/assignment1</a>
+                    </div>
+                    <p class="text-gray-600">Assignment info: Details about the second assignment, including technologies used and key learnings.</p>
+                </div>
+
+                <!-- Add more assignments as needed -->
+            </div>
+        </div>
     </main>
-
-    <footer>
-        <p>© 2024 Sofia Boada</p>
-    </footer>
 </body>
 </html>
