--- a/contact.html
+++ b/contact.html
@@ -1,34 +1,53 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Sofia Boada</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>Contact</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
 </head>
-<body>
-    <header>
-        <nav class="flex justify-center space-x-8">
-            <a class="text-gray-700 hover:text-blue-500" href="index.html">About Me</a>
-            <a class="text-gray-700 hover:text-blue-500" href="work-experience.html">Work Experience</a>
-            <a class="text-gray-700 hover:text-blue-500" href="projects.html">Projects</a>
-            <a class="text-gray-700 hover:text-blue-500" href="contact.html">Contact</a>
-            <a class="text-gray-700 hover:text-blue-500" href="assignments.html">Assignments</a>
-        </nav>
-        
-    </header>
+<body class="bg-blue-100">
+    <!-- Header bar -->
+    <div class="bg-white py-4 shadow-md">
+        <div class="container mx-auto px-4">
+            <nav class="flex justify-center space-x-8">
+                <a class="text-gray-700 hover:text-blue-500" href="#">About Me</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Work Experience</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Projects</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Contact</a>
+                <a class="text-gray-700 hover:text-blue-500" href="#">Assignments</a>
+            </nav>
+        </div>
+    </div>
 
-    <main>
-        <h1>Contact</h1>
-        <p>You can reach me via the following:</p>
-        <ul>
-            <li>Email: <a href="mailto:sofiabl@bu.edu">sofiabl@bu.edu</a></li>
-            <li>LinkedIn: <a href="https://linkedin.com/in/sofiaboada" target="_blank">Sofia Boada</a></li>
-        </ul>
+    <main class="container mx-auto px-4 mt-12">
+        <h1 class="text-4xl font-bold text-center text-gray-800 mb-8">Contact</h1>
+
+        <div class="bg-white rounded-lg shadow-md p-6 max-w-md mx-auto">
+            <div class="space-y-4">
+                <div class="flex items-center">
+                    <i class="fas fa-envelope text-blue-500 w-8"></i>
+                    <span class="font-semibold mr-2">Email:</span>
+                    <a href="mailto:your.email@example.com" class="text-blue-600 hover:underline">your.email@example.com</a>
+                </div>
+                <div class="flex items-center">
+                    <i class="fab fa-linkedin text-blue-500 w-8"></i>
+                    <span class="font-semibold mr-2">LinkedIn:</span>
+                    <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="text-blue-600 hover:underline">linkedin.com/in/yourprofile</a>
+                </div>
+                <div class="flex items-center">
+                    <i class="fas fa-phone text-blue-500 w-8"></i>
+                    <span class="font-semibold mr-2">Phone:</span>
+                    <a href="tel:+1234567890" class="text-blue-600 hover:underline">+1 (234) 567-890</a>
+                </div>
+            </div>
+        </div>
     </main>
-
-    <footer>
-        <p>© 2024 Sofia Boada</p>
-    </footer>
 </body>
 </html>
