--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -20,10 +21,9 @@
                 <a class="text-gray-700 hover:text-blue-500" href="index.html">About Me</a>
                 <a class="text-gray-700 hover:text-blue-500" href="work-experience.html">Work Experience</a>
                 <a class="text-gray-700 hover:text-blue-500" href="projects.html">Projects</a>
-                <a class="text-gray-700 hover:text-blue-500" href="contacts.html">Contact</a>
+                <a class="text-gray-700 hover:text-blue-500" href="contact.html">Contact</a>
                 <a class="text-gray-700 hover:text-blue-500" href="assignments.html">Assignments</a>
             </nav>
-            
         </div>
     </div>
 
@@ -35,17 +35,12 @@
                 <div class="flex items-center">
                     <i class="fas fa-envelope text-blue-500 w-8"></i>
                     <span class="font-semibold mr-2">Email:</span>
-                    <a href="mailto:your.email@example.com" class="text-blue-600 hover:underline">your.email@example.com</a>
+                    <a href="mailto:sofiabl@bu.edu" class="text-blue-600 hover:underline">sofiabl@bu.edu</a>
                 </div>
                 <div class="flex items-center">
                     <i class="fab fa-linkedin text-blue-500 w-8"></i>
                     <span class="font-semibold mr-2">LinkedIn:</span>
-                    <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="text-blue-600 hover:underline">linkedin.com/in/yourprofile</a>
-                </div>
-                <div class="flex items-center">
-                    <i class="fas fa-phone text-blue-500 w-8"></i>
-                    <span class="font-semibold mr-2">Phone:</span>
-                    <a href="tel:+1234567890" class="text-blue-600 hover:underline">+1 (234) 567-890</a>
+                    <a href="https://www.linkedin.com/in/sofiaboada" target="_blank" class="text-blue-600 hover:underline">linkedin.com/in/sofiaboada</a>
                 </div>
             </div>
         </div>
