--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -20,10 +21,9 @@
                 <a class="text-gray-700 hover:text-blue-500" href="index.html">About Me</a>
                 <a class="text-gray-700 hover:text-blue-500" href="work-experience.html">Work Experience</a>
                 <a class="text-gray-700 hover:text-blue-500" href="projects.html">Projects</a>
-                <a class="text-gray-700 hover:text-blue-500" href="contacts.html">Contact</a>
+                <a class="text-gray-700 hover:text-blue-500" href="contact.html">Contact</a>
                 <a class="text-gray-700 hover:text-blue-500" href="assignments.html">Assignments</a>
             </nav>
-            
         </div>
     </div>
 
@@ -38,21 +38,21 @@
             <!-- Left side boxes -->
             <div class="md:w-1/2 space-y-8">
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Box 1</h2>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Background</h2>
                     <p class="text-gray-600">
-                        Content for box 1 goes here. You can add more details about your company or services.
+                        I grew up in the Bay Area and spent 17 years there before moving to Denver, CO during the pandemic.
                     </p>
                 </div>
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Box 2</h2>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4">My Roots</h2>
                     <p class="text-gray-600">
-                        Content for box 2 goes here. This could be about your mission or values.
+                        I am Colombian, and nothing keeps me closer to my roots than visiting Colombia frequently.
                     </p>
                 </div>
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Box 3</h2>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Languages</h2>
                     <p class="text-gray-600">
-                        Content for box 3 goes here. Perhaps information about your team or achievements.
+                        I’m fluent in Spanish and am currently learning Mandarin.
                     </p>
                 </div>
             </div>
