--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -20,10 +21,9 @@
                 <a class="text-gray-700 hover:text-blue-500" href="index.html">About Me</a>
                 <a class="text-gray-700 hover:text-blue-500" href="work-experience.html">Work Experience</a>
                 <a class="text-gray-700 hover:text-blue-500" href="projects.html">Projects</a>
-                <a class="text-gray-700 hover:text-blue-500" href="contacts.html">Contact</a>
+                <a class="text-gray-700 hover:text-blue-500" href="contact.html">Contact</a>
                 <a class="text-gray-700 hover:text-blue-500" href="assignments.html">Assignments</a>
             </nav>
-            
         </div>
     </div>
 
@@ -31,11 +31,9 @@
         <h1 class="text-4xl font-bold text-center text-gray-800 mb-8">Projects</h1>
 
         <div class="bg-white rounded-lg shadow-md p-6 max-w-2xl mx-auto">
-            <h2 class="text-2xl font-bold text-gray-800 mb-4">PROJECT TITLE</h2>
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">AI Knowledge Graphs</h2>
             <ul class="list-disc pl-6 space-y-2">
-                <li>What I did in this project</li>
-                <li>Another key feature or accomplishment</li>
-                <li>One more bullet point about the project</li>
+                <li>Developed a system integrating Large Language Models with Knowledge Graphs at Accenture.</li>
             </ul>
         </div>
     </main>
