--- a/assignments.html
+++ b/assignments.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -20,10 +21,9 @@
                 <a class="text-gray-700 hover:text-blue-500" href="index.html">About Me</a>
                 <a class="text-gray-700 hover:text-blue-500" href="work-experience.html">Work Experience</a>
                 <a class="text-gray-700 hover:text-blue-500" href="projects.html">Projects</a>
-                <a class="text-gray-700 hover:text-blue-500" href="contacts.html">Contact</a>
+                <a class="text-gray-700 hover:text-blue-500" href="contact.html">Contact</a>
                 <a class="text-gray-700 hover:text-blue-500" href="assignments.html">Assignments</a>
             </nav>
-            
         </div>
     </div>
 
@@ -37,19 +37,9 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/yourusername/assignment0" target="_blank" class="text-blue-600 hover:underline">https://github.com/yourusername/assignment0</a>
+                        <a href="https://github.com/sobo3038/assignment-0" target="_blank" class="text-blue-600 hover:underline">assignment-0</a>
                     </div>
-                    <p class="text-gray-600">Assignment info: Brief description of what the assignment entailed and what you accomplished.</p>
-                </div>
-
-                <div>
-                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 1</h2>
-                    <div class="flex items-center mb-2">
-                        <i class="fab fa-github text-gray-600 mr-2"></i>
-                        <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/yourusername/assignment1" target="_blank" class="text-blue-600 hover:underline">https://github.com/yourusername/assignment1</a>
-                    </div>
-                    <p class="text-gray-600">Assignment info: Details about the second assignment, including technologies used and key learnings.</p>
+                    <p class="text-gray-600">A Python script that adds two numbers.</p>
                 </div>
 
                 <!-- Add more assignments as needed -->
