added about me on index page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main class="container mx-auto px-4 mt-12">
         <h1 class="text-4xl font-bold text-center text-gray-800 mb-4">About Me</h1>
         <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12">
-            Hello! My name is Sofia Boada and I am a senior studying Computer Science at Boston University.
+            Hello! My name is Sofia Boada! I am a senior studying Computer Science at Boston University.
         </p>
         
         <!-- Content section with boxes and picture spaces -->
@@ -40,19 +40,20 @@
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
                     <h2 class="text-2xl font-bold text-gray-800 mb-4">Background</h2>
                     <p class="text-gray-600">
-                        I grew up in the Bay Area and spent 17 years there before moving to Denver, CO during the pandemic.
+                        I grew up in the Bay Area and lived there for 17 years before moving to Denver, CO where I have lived for the past 4 years.
+                        I am also Colombian and get to visit friends and family, with whom I indulge in colombian culture and tradtions that I usually don't get to be a part of when I'm in the United States. 
                     </p>
                 </div>
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-4">My Roots</h2>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Hobbies</h2>
                     <p class="text-gray-600">
-                        I am Colombian, and nothing keeps me closer to my roots than visiting Colombia frequently.
+                        When I am not busy with school, I will either be watching watching or playing tennis, hitting the golf course, or skiing. Apart from sports I love to play the piano and cook!
                     </p>
                 </div>
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Languages</h2>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Food</h2>
                     <p class="text-gray-600">
-                        I’m fluent in Spanish and am currently learning Mandarin.
+                        I love food! Sushi, Arepas, Pizza, Tacos, ANYTHING.
                     </p>
                 </div>
             </div>
