added work experience

--- a/work-experience.html
+++ b/work-experience.html
@@ -31,11 +31,33 @@
         <h1 class="text-4xl font-bold text-center text-gray-800 mb-8">Work Experience</h1>
 
         <div class="bg-white rounded-lg shadow-md p-6 max-w-2xl mx-auto">
-            <h2 class="text-2xl font-bold text-gray-800 mb-4">Summer Analyst at Accenture</h2>
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">Enterprise Tech Arch Summer Analyst at Accenture</h2>
             <ul class="list-disc pl-6 space-y-2">
-                <li>Worked on integrating Large Language Models with Knowledge Graphs.</li>
-                <li>Contributed to client workshops and capability demonstrations.</li>
-                <li>Developed proof of concepts (POCs) in the automotive industry.</li>
+                <li>Supported an AI team at Accenture, working in partnership with a Fortune 500 semiconductor company, to
+                    implement cutting-edge AI solutions for a leading networking hardware company. </li>
+                <li>Developed a high-level architecture diagram for an automated transaction log analysis solution, incorporating
+                    Knowledge Graphs using Neo4j and Retrieval-Augmented Generation</li>
+                <li>Contributed to capability demonstrations and client workshops, resulting in two new client POCs,
+                    streamlining processes for healthcare and technology clients with advanced AI architectures.</li>
+            </ul>
+        </div>
+        <div class="bg-white rounded-lg shadow-md p-6 max-w-2xl mx-auto">
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">IT Team and Environmental Summer Intern at Agtools Inc. </h2>
+            <ul class="list-disc pl-6 space-y-2">
+                <li>Analyzed Agtools' database and developed a pilot proposal using a sustainability widget that calculates fuel
+                    and freight costs, reducing carbon emissions, and evaluates the environmental and economic impacts of
+                    commodity transport.</li>
+                <li>Designed a dynamic news widget that aggregates and displays real-time news from TV stations, radio
+                    broadcasts, and online news platforms using API integrations on Agtools' widgets.</li>
+            </ul>
+        </div>
+        <div class="bg-white rounded-lg shadow-md p-6 max-w-2xl mx-auto">
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">Mobile App Development Summer Intern at RobinFood. </h2>
+            <ul class="list-disc pl-6 space-y-2">
+                <li>Worked in the front-end web development team for this startup, which incorporates technology in a fast-food
+                    chain of restaurants.</li>
+                <li>Developed and upgraded a training app for restaurant kitchen workers using Swift, enhancing meal
+                    preparation skills and ensuring efficient, clean, and fast order preparation.</li>
             </ul>
         </div>
     </main>
