added projects section

--- a/projects.html
+++ b/projects.html
@@ -33,8 +33,26 @@
         <div class="bg-white rounded-lg shadow-md p-6 max-w-2xl mx-auto">
             <h2 class="text-2xl font-bold text-gray-800 mb-4">AI Knowledge Graphs</h2>
             <ul class="list-disc pl-6 space-y-2">
-                <li>Developed a system integrating Large Language Models with Knowledge Graphs at Accenture.</li>
+                <li>Developed a transaction log solution system integrating Large Language Models with Knowledge Graphs.</li>
             </ul>
+
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">Interactive Weather App</h2>
+            <ul class="list-disc pl-6 space-y-2">
+                <li>Developed a weather app that integrates healthcare and weather APIs with OpenAI to provide personalized 
+                    recommendations on whether users should go out based on their location and health conditions.
+                </li>
+            </ul>
+
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">Kitchen Training Game App</h2>
+            <ul class="list-disc pl-6 space-y-2">
+                <li>Developed an interactive training application tailored for kitchen workers to enhance their meal preparation skills. </li>
+            </ul>
+
+            <h2 class="text-2xl font-bold text-gray-800 mb-4"></h2>
+            <ul class="list-disc pl-6 space-y-2">
+                <li></li>
+            </ul>
+
         </div>
     </main>
 </body>
