added contact section

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                 <div class="flex items-center">
                     <i class="fab fa-linkedin text-blue-500 w-8"></i>
                     <span class="font-semibold mr-2">LinkedIn:</span>
-                    <a href="https://www.linkedin.com/in/sofiaboada" target="_blank" class="text-blue-600 hover:underline">linkedin.com/in/sofiaboada</a>
+                    <a href="www.linkedin.com/in/sofia-boada" target="_blank" class="text-blue-600 hover:underline">www.linkedin.com/in/sofia-boada</a>
                 </div>
             </div>
         </div>
