added assignemnts section

--- a/assignments.html
+++ b/assignments.html
@@ -32,6 +32,8 @@
 
         <div class="bg-white rounded-lg shadow-md p-6 max-w-2xl mx-auto">
             <div class="space-y-6">
+
+                 <!-- Assignment 0 -->
                 <div>
                     <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 0</h2>
                     <div class="flex items-center mb-2">
@@ -39,10 +41,132 @@
                         <span class="font-semibold mr-2">GitHub Link:</span>
                         <a href="https://github.com/sobo3038/assignment-0" target="_blank" class="text-blue-600 hover:underline">assignment-0</a>
                     </div>
-                    <p class="text-gray-600">A Python script that adds two numbers.</p>
+                    <p class="text-gray-600">XXX</p>
                 </div>
 
-                <!-- Add more assignments as needed -->
+                <!-- Assignment 1 -->
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 1</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/sobo3038/assignment-1" target="_blank" class="text-blue-600 hover:underline">assignment-1</a>
+                    </div>
+                    <p class="text-gray-600">XXX</p>
+                </div>
+
+                <!-- Assignment 2 -->
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 2</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/sobo3038/assignment-2" target="_blank" class="text-blue-600 hover:underline">assignment-2</a>
+                    </div>
+                    <p class="text-gray-600">XXX</p>
+                </div>
+
+                <!-- Assignment 3 -->
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 3</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/sobo3038/assignment-3" target="_blank" class="text-blue-600 hover:underline">assignment-3</a>
+                    </div>
+                    <p class="text-gray-600">XXX</p>
+                </div>
+
+                <!-- Assignment 4 -->
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 4</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/sobo3038/assignment-4" target="_blank" class="text-blue-600 hover:underline">assignment-4</a>
+                    </div>
+                    <p class="text-gray-600">XXX</p>
+                </div>
+
+                <!-- Assignment 5 -->
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 5</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/sobo3038/assignment-5" target="_blank" class="text-blue-600 hover:underline">assignment-5</a>
+                    </div>
+                    <p class="text-gray-600">XXX</p>
+                </div>
+
+
+                <!-- Assignment 6 -->
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 6</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/sobo3038/assignment-6" target="_blank" class="text-blue-600 hover:underline">assignment-6</a>
+                    </div>
+                    <p class="text-gray-600">XXX</p>
+                </div>
+
+
+                <!-- Assignment 7 -->
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 7</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/sobo3038/assignment-7" target="_blank" class="text-blue-600 hover:underline">assignment-7</a>
+                    </div>
+                    <p class="text-gray-600">XXX</p>
+                </div>
+
+                <!-- Assignment 8 -->
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 8</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/sobo3038/assignment-8" target="_blank" class="text-blue-600 hover:underline">assignment-8</a>
+                    </div>
+                    <p class="text-gray-600">XXX</p>
+                </div>
+
+                <!-- Assignment 9 -->
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 9</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/sobo3038/assignment-9" target="_blank" class="text-blue-600 hover:underline">assignment-9</a>
+                    </div>
+                    <p class="text-gray-600">XXX</p>
+                </div>
+
+
+                <!-- Assignment 10 -->
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 10</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/sobo3038/assignment-10" target="_blank" class="text-blue-600 hover:underline">assignment-10</a>
+                    </div>
+                    <p class="text-gray-600">XXX</p>
+                </div>
+
+                <!-- Assignment 11 -->
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 11</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/sobo3038/assignment-11" target="_blank" class="text-blue-600 hover:underline">assignment-11</a>
+                    </div>
+                    <p class="text-gray-600">XXX</p>
+                </div>
             </div>
         </div>
     </main>
